objects/ProductItem.object
<CustomObject>
    <fields>
        <fullName>Allocated_Inventory__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Allocated Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnergyAid_Product_SKU__c</fullName>
        <formula>Product2.EnergyAid_Product_SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnergyAid Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>EnergyAid_Product_SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity remaining from all unused serialized products.</inlineHelpText>
        <label>Overall Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serialized__c</fullName>
        <formula>Product2.IsSerialized</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serialized</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>